--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   go_router: ^6.2.0
   intl: ^0.18.0
+  http: ^0.13.5
+  fluttertoast: ^8.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
