--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   go_router: ^6.2.0
   intl: ^0.18.0
   http: ^0.13.5
-  fluttertoast: ^8.2.1
+  fluttertoast: ^8.0.9
+  flutter_easyloading: ^3.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
