--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   http: ^0.13.5
   fluttertoast: ^8.0.9
   flutter_easyloading: ^3.0.5
+  loading_animation_widget:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
